--- a/Templates/admin_user_form.html
+++ b/Templates/admin_user_form.html
@@ -36,6 +36,7 @@
 <TMPL_IF enp_5>
 <TR><TD align=right><b>2-Factor authentication</b></TD><TD><input type="checkbox" name="usr_2fa" value="1"<TMPL_IF usr_2fa> checked</TMPL_IF>></TD></TR>
 </TMPL_IF>
+<TR><TD align=right><b>Allow VIP files</b></TD><TD><input type="checkbox" name="usr_allow_vip_files" value="1"<TMPL_IF usr_allow_vip_files> checked</TMPL_IF>></TD></TR>
 <TMPL_IF m_y>
 <TR><TD align=right valign=top><b>Profit mode</b></TD><TD>
 <Select name="usr_profit_mode">
