--- a/Templates/main.html
+++ b/Templates/main.html
@@ -201,7 +201,7 @@
                <TMPL_IF mobile_device><li><a href="#" onclick="$.removeCookie('design', { path: '/', domain: document.domain });document.location.reload();return false;">Mobile Version</a></li></TMPL_IF>
             </ul>
       </div>
-      <a href="https://sibsoft.net/xfilesharing.html" title="File sharing script"><img class="flogo" src="<TMPL_VAR site_url>/images/logo_bw.png" alt="file sharing script"></a>
+      <a href="https://sibsoft.net/xfilesharing.html" title="file hosting script"><img class="flogo" src="<TMPL_VAR site_url>/images/logo_bw.png" alt="file hosting script"></a>
       
    </div>
 </footer>
