--- a/Templates/my_files.html
+++ b/Templates/my_files.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="<TMPL_VAR site_url>/js/bootstrap-confirm.min.js"></script>
+<script type="text/javascript" src="<TMPL_VAR site_url>/js/bootstrap-confirm.js"></script>
 <script type="text/javascript" src="<TMPL_VAR site_url>/js/dialogs.js"></script>
 
 <div style="width: 980px">
@@ -30,8 +30,6 @@
 </script>
 <div id="tiplayer" style="position:absolute; visibility:hidden; z-index:10000;"></div>
 </TMPL_IF>
-
-		<script src="<TMPL_VAR site_url>/js/dialog.js"></script>
 
 		<form style="margin:0;" method="POST" action="<TMPL_VAR site_url>/" name="F1">
 		<input type="hidden" name="op" value="my_files">
