--- a/Templates/splash.html
+++ b/Templates/splash.html
@@ -43,6 +43,14 @@
 						
 		</div> 
 	</div>
+
+   <TMPL_IF demo_mode>
+   <br><br><br>
+   <a href="https://play.google.com/store/apps/details?id=net.sibsoft.xfsuploader" target="_new"><img src="/images/android.png" height="61"></a>
+   <a href="/desktop_file_manager_mac.zip" target="_new"><img src="/images/mac_os.png" height="61"></a>
+   <a href="/desktop_file_manager_win.zip" target="_new"><img src="/images/windows.png" height="61"></a>
+   </TMPL_IF>
+
     <script>
     $('body').addClass('blues');
     </script>
