--- a/Templates/admin_files.html
+++ b/Templates/admin_files.html
@@ -23,9 +23,9 @@
 </td></tr>
 <tr><td colspan=2 align=center>
     <textarea name="mass_search" id="mass_search" wrap="off" style="width:99%;display:none;font-size:11px;" rows=10></textarea>
-    <small><a href="#" id="btn1"><TMPL_VAR lang_mass_search></a></small>
+    <small><a href="#" id="expand_mass_search"><TMPL_VAR lang_mass_search></a></small>
 </td></tr>
-<tr><td colspan=2 align=center><input type="submit" value="<TMPL_VAR lang_show_files>"></td></tr>
+<tr><td colspan=2 align=center><input type="submit" name="show_files" value="<TMPL_VAR lang_show_files>"></td></tr>
 </Table>
 <br>
 
@@ -98,8 +98,8 @@
 
 <script language="JavaScript">
 $(document).ready(function(){
-    $("#btn1").click( function(){
-        $("#btn1").hide("normal", function(){
+    $("#expand_mass_search").click( function(){
+        $("#expand_mass_search").hide("normal", function(){
             $("#mass_search").show("normal");
             });
     });
