--- a/Templates/admin_torrents.html
+++ b/Templates/admin_torrents.html
@@ -42,7 +42,7 @@
     <TD><TMPL_VAR working></TD>
     <TD><a href="<TMPL_VAR site_url>/?op=admin_user_edit&usr_id=<TMPL_VAR usr_id>"><TMPL_VAR usr_login></a></TD>
     <TD><TMPL_VAR srv_id></TD>
-    <TD><a href="?op=admin_torrents;del_torrent=<TMPL_VAR sid>" onClick="return confirm('<TMPL_VAR lang_delete_file>')"><img src="<TMPL_VAR site_url>/images/icon_delete.png" border=0></a></TD>
+    <TD><a href="?op=admin_torrents;del_torrent=<TMPL_VAR sid>;token=<TMPL_VAR token>" onClick="return confirm('<TMPL_VAR lang_delete_file>')"><img src="<TMPL_VAR site_url>/images/icon_delete.png" border=0></a></TD>
 </TR>
 </TMPL_LOOP>
 </Table>
