--- a/Templates/video_embed.html
+++ b/Templates/video_embed.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <HTML>
 <HEAD>
 <script language="JavaScript" type="text/javascript" CHARSET="UTF-8" src="<TMPL_VAR site_url>/js/jquery-1.9.1.min.js"></script>
